harbor/db/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: harbor
  labels:
    app: postgres
spec:
  serviceName: postgres
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      nodeSelector:
        kubernetes.io/hperf: "true"
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: pgautoupgrade/pgautoupgrade:latest@sha256:eedde0f91435b7c42cce65bb3c87ce4c226a47bf85aed395e2a79b28826d9f86
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
          readinessProbe:
            exec:
              command:
                ["pg_isready", "-d", "$(POSTGRES_DB)", "-U", "$(POSTGRES_USER)"]
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                ["pg_isready", "-d", "$(POSTGRES_DB)", "-U", "$(POSTGRES_USER)"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 60
      volumes:
        - name: postgres-data
          hostPath:
            path: /mnt/cephfs/docker/harbor/postgres/data
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: harbor
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
